fleet list displayed

--- a/admin.html
+++ b/admin.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <style>
-        .nav{
+        #nav{
             background-color: bisque;
             display: flex;
             flex-direction: row;
             gap: 20px;
+            padding: 15px;
+            align-items: center;
+            justify-content: center;
         }
         #sidebar {
             display: flex;
